Some reformatting, update headers, try to fix warnings.